<resources>
    <string name="app_name">Share Multimedia App</string>
    <string name="action_settings">Settings</string>
    <string name="save_contact">SAVE CONTACT</string>
    <string name="userName">Name</string>
    <string name="usernameInput">Name</string>
    <string name="userPhone">Phone</string>
    <string name="userphoneinput">Phone Number</string>
    <string name="userEmail">Email</string>
    <string name="useremailInput">Email Adress</string>
    <string name="userAddress">Address</string>
    <string name="useraddressInput">Home Address</string>
    <string name="userNickname">Nickname</string>
    <string name="usernicknameInput">Nickname</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="Add_New">Add_New</string>

    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="share">Share</string>
    <string name="gallery">Gallery</string>
    <string name="share_photo">Share</string>
    <string name="camera">Camera</string>
    <string name="image_photo">Image</string>
    <string name="phoneBook">Phone Book Database</string>
    <string name="pb_logo">phoneBookLogo</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
